<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>teleop_key_py</name>
  <version>0.0.0</version>
  <description>
    Python node to control a robot from a keyboard.
  </description>
  <maintainer email="clalancette@osrfoundation.org">Chris Lalancette</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
