<?xml version="1.0"?>
<package format="2">
  <name>turtlebot2_drivers</name>
  <version>0.0.0</version>
  <description>Description!</description>
  <maintainer email="gerkey@osrfoundation.org"></maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
