<?xml version="1.0"?>
<package format="2">
  <name>turtlebot2_drivers</name>
  <version>0.0.0</version>
  <description>Description!</description>
  <maintainer email="gerkey@osrfoundation.org"></maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>astra_camera</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>depth_to_pointcloud</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
