<?xml version="1.0"?>
<package format="2">
  <name>turtlebot2_follower</name>
  <version>0.4.0</version>
  <description>A simple follower using centroid in depth images.</description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <license>Apache License 2.0</license>
  <author email="gerkey@osrfoundation.org">Brian Gerkey</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>astra_camera</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>ros2run</exec_depend>
  <exec_depend>turtlebot2_drivers</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
