<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ecl_command_line</name>
  <version>0.61.18</version>
  <description>
     Embeds the TCLAP library inside the ecl. This is a very convenient
     command line parser in templatised c++.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_command_line</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ecl_license</build_depend>
  <exec_depend>ecl_license</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
  </export>

</package>
